<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:animateLayoutChanges="true" >

    <RelativeLayout android:id="@+id/searchLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp">

        <EditText
            android:id="@+id/editTextSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/search_for_food"
            android:imeOptions="actionSearch"
            android:inputType="text" >
            <requestFocus />
        </EditText>

        <ImageButton
            android:id="@+id/buttonSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/editTextSearch"
            android:src="@drawable/ic_action_search_light"
            android:text="@string/search"
            android:contentDescription="@string/search_button" />

        <ProgressBar
            android:id="@+id/progressBarSearch"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonSearch"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            android:indeterminate="true" />

    </RelativeLayout>
    
    <ListView android:id="@id/android:list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/searchLayout"
        android:visibility="gone" >
    </ListView>

</RelativeLayout>